<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@android:color/background_light">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name2"
        android:id="@+id/title"
        android:textSize="@dimen/_40sdp"
        android:textColor="@android:color/secondary_text_light"
        android:elegantTextHeight="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/searchText"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout"
        android:paddingTop="@dimen/_20sdp"
        android:orientation="vertical">
        <Button
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_110sdp"
            android:text="@string/favs"
            android:id="@+id/favsButton"
            android:drawableTop="@android:drawable/star_big_off"
            android:paddingTop="@dimen/_20sdp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_110sdp"
            android:text="@string/hist"
            android:id="@+id/histButton"
            android:drawableTop="@android:drawable/ic_menu_view"
            android:paddingTop="@dimen/_20sdp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_110sdp"
            android:text="@string/topics"
            android:id="@+id/topicButton"
            android:drawableTop="@android:drawable/sym_action_chat" />
    </LinearLayout>


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchText"
        android:inputType="text"
        android:theme="@style/MyEditTextTheme"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"
        android:layout_toStartOf="@+id/searchButton">
    </EditText>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchButton"
        android:contentDescription="@string/imgDescription"
        android:src="@android:drawable/ic_menu_search"
        android:layout_alignBottom="@+id/searchText"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/ipol"
        android:layout_alignTop="@+id/title"
        android:layout_toStartOf="@+id/title"
        android:layout_above="@+id/searchText"
        android:contentDescription="@string/ipolIcon"/>


</RelativeLayout>