<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="app.com.example.carlos.tfgipol.FavsView"
    android:background="@android:color/background_light"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name2"
        android:id="@+id/title"
        android:textSize="@dimen/_40sdp"
        android:textColor="@android:color/secondary_text_light"
        android:elegantTextHeight="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleImage"
        android:src="@drawable/ipol"
        android:layout_alignTop="@+id/title"
        android:layout_toStartOf="@+id/title"
        android:contentDescription="@string/ipolIcon"
        android:layout_alignBottom="@+id/title" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchFilter"
        android:theme="@style/MyEditTextTheme"
        android:layout_below="@+id/title"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/black"
        android:layout_toStartOf="@+id/searchButton"
        android:autoText="false"
        android:inputType="text"
        android:hint="Search..."
        android:textColorHint="@android:color/darker_gray"/>


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchButton"
        android:contentDescription="@string/imgDescription"
        android:src="@android:drawable/ic_menu_search"
        android:layout_alignBottom="@+id/searchFilter"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/searchFilter"

        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/favs"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_30sdp"
            android:gravity="center"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/list"
            android:dividerHeight="2dp"
            android:divider="@android:color/darker_gray">

        </ListView>

    </LinearLayout>

</RelativeLayout>
